fixed x-axis overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,11 @@
+* { 
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
-  width: 100vw;
 }
 
 main {
@@ -17,9 +22,12 @@ a {
   display: grid;
   grid-template-columns: 1fr;
   height: 80px;
-  width: 100%;
+  width: 100vw;
   position: fixed;
   z-index: 10;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 .nav-logo {
@@ -414,6 +422,10 @@ h6 {
   grid-gap: 48px 24px;
   width: 100%;
   height: auto;
+}
+
+.most-popular ul li {
+  list-style: none;
 }
 
 .latest-news h1 a::after,
@@ -977,7 +989,7 @@ footer {
     height: auto;
   }
 
-  .most-popular ul li {
+  .top-footer li {
     list-style: none;
   }
 
@@ -989,10 +1001,6 @@ footer {
     grid-template-columns: 1fr;
     grid-gap: 24px 0;
     margin: 0 0 56px;
-  }
-
-  .top-footer li {
-    list-style: none;
   }
 
   .latest-d ul li {
